fix conf bottom overlapping problem on user prof page

--- a/public/stylesheets/user-prof.css
+++ b/public/stylesheets/user-prof.css
@@ -400,8 +400,7 @@ a:hover{
     position:absolute;
     margin-left: 5px;
     margin-top: 5px;
-    
-
+    z-index: 5;
   }
 
   .fa-cog{
